# lore

./: .gitignore  CONTRIBUTING.md  FAQ.md  LANGUAGE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-check.yml
conformance/: README.md
docs/: DEVELOPER_GUIDE.md  LAUNCH_TOOLING.md  MEETING_TO_ONTOLOGY.md  PLUGIN_GUIDE.md  README.md  SKILL_PUBLISHING.md  VERSIONING_RELEASE.md
docs/releases/: v0.2.0.md  v0.2.1.md
examples/ai-first-client-learning/: INDEX.lore  lore.yaml
examples/b2b-saas-gtm/: INDEX.lore  lore.yaml
examples/healthcare-care-navigation/: INDEX.lore  lore.yaml
examples/implementation-kickoff-intelligence/: INDEX.lore  lore.yaml
examples/support-intelligence-loop/: INDEX.lore  lore.yaml
scripts/: launch_smoke.sh
skills/: marketplace.json
skills/lorelang/: SKILL.md  plugin.json
spec/: SPECIFICATION.md
src/lore/: __init__.py  cli.py  curator.py  diff.py  evolution.py  indexer.py  ingest.py  models.py  parser.py  plugins.py  projection.py  review.py  sdk.py  validator.py  view_scope.py
tests/: conftest.py  test_agents_md.py  test_compilers.py  test_curator.py  test_decisions.py  test_edge_cases.py  test_evolution.py  test_indexer.py  test_ingest_review.py  test_integration.py  test_language_conformance.py  test_models.py  test_observations_outcomes.py  test_palantir_compiler.py  test_parser.py  test_plugins_runtime.py  test_projection.py  test_provenance.py  test_sdk.py  test_stress.py  test_tools_compiler.py  test_v02_features.py  test_validator.py
(+157 files in other folders)
